--- a/styles/about.css
+++ b/styles/about.css
@@ -4,31 +4,67 @@ main {
     padding-top: 180px;
 }
 
-.first-section, .second-section, .third-section {
+h1 {
+    text-align: center;
+}
+.first-section, .second-section, .third-section, .fourth-section {
     display: flex;
+    flex-direction: column;
 }
 
-.gamehub-info {
+.gamehub-info, .general-info, .resell-container, .esport-info {
     width: 600px;
-    margin-left: 150px;
+    text-align: center;
+    margin: 0 auto;
 }
-.gamehub-info h1 {
+.gamehub-info h2, .general-info h2, .resell-container h2, .esport-info h2 {
+    padding-top: 30px;
     padding-bottom: 20px;
     font-size: 30px;
 }
-.gamehub-info p {
+.gamehub-info, .general-info, .resell-container, .esport-info p {
     line-height: 25px;
+   
 }
 .p-bg {
     background-color: var(--clr-dark);
     border-radius: 4px;
-    opacity: 80%;
     padding: 10px;
+}
+
+.gamehub-logo, .esport-img {
+    padding-top: 30px;
+    margin: 0 auto;
 }
 
 .gamehub-logo {
     width: 450px;
     height: auto;
-    margin-left: 350px;
-    margin-top: 80px;
+}
+.esport-img {
+    width: 700px;
+    height: auto;
+    border-radius: 8px;
+}
+
+
+@media (max-width: 720px) {
+    .esport-img {
+        width: 600px;
+    
+    }
+}
+@media (max-width: 620px) {
+    .gamehub-info h2, .general-info h2, .resell-container h2, .esport-info h2 {
+        font-size: 1.2rem;
+    }
+    .gamehub-info, .general-info, .resell-container, .esport-info p {
+        font-size: 0.7rem;
+    }
+    .p-bg {
+        width: 400px;
+    }
+    .esport-img, .gamehub-logo {
+        width: 400px;
+    }
 }
