--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 @import url("variables.css");
 
 .featured-cta {
-    height: 550px;
+    height: 600px;
     background-image: url("/images/Banner5.jpg");
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -10,6 +10,7 @@
     text-align: center;
     line-height: 50px;
     padding-top: 90px;
+    background-position-y: 29%;
 }
 .cta-info {
     background-color: var(--clr-dark);
@@ -17,7 +18,7 @@
     width: 160px;
     border-radius: 4px;
     float: left;
-    margin-left: 75px;
+    margin-left: 230px;
     margin-top: 130px;
 }
 .cta-background {
@@ -43,7 +44,7 @@
     justify-content: space-evenly;
 }
 
-#line-icons {
+.line-icons {
     display: flex;
     width: 100px;
     float: left;
@@ -77,13 +78,47 @@
     height: auto;
     border-radius: 0 4px 4px 0;
 }
-
+/* FEATURED SECTION */
+.featured-games {
+    margin-top: 50px;
+    padding: 15px;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.featured-container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5em;
+    width: 1080px;
+    height: 300px;
+    background-color: var(--clr-dark);
+    border-radius: 4px;
+    
+}
+.featured-img {
+    width: 210px;
+    height: auto;
+    border-radius: 4px;
+    border: solid 3px var(--clr-dark);
+}
+.featured-img:hover {
+    opacity: 70%;
+}
 
 
 
 @media (max-width: 980px) {
     .featured-cta {
         background-position-x: center;
+        background-position-y: 65%;
+    }
+    .cta-info {
+        margin-left: 50px;
     }
     .community-container {
         flex-direction: column-reverse;
@@ -95,6 +130,13 @@
     }
     .community-info {
         border-radius: 0 0 4px 4px;
+    }
+    .featured-container {
+        width: 800px;
+        height: auto;
+        padding: 20px;
+        flex-wrap: wrap;
+        margin-bottom: 250px;
     }
 }
 
@@ -136,6 +178,9 @@
         width: 400px;
         height: auto;
     }
+    .featured-container {
+        width: 450px;
+    }
 }
 
 @media (max-width: 430px) {
@@ -166,20 +211,4 @@
         font-size: 1.6rem;
         padding-left: 10px;
     }
-}
-
-
-
-.carousel {
-    scroll-snap-type: x mandatory;
-    scroll-padding: 0 24px;
-}
-
-.carousel .item {
-    scroll-snap-align: start;
-}
-
-.carousel-img {
-    width: 200px;
-    height: auto;
 }
