--- a/styles/index.css
+++ b/styles/index.css
@@ -11,6 +11,7 @@
     line-height: 50px;
     padding-top: 90px;
     background-position-y: 29%;
+    border-bottom: solid 3px var(--clr-primary);
 }
 .cta-info {
     background-color: var(--clr-dark);
@@ -36,15 +37,38 @@
     font-size: 1rem;
 }
 
+.trending-games {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.trending-games h2 {
+    margin-bottom: 10px;
+}
+.trending-container {
+    width: 1200px;
+    height: 330px;
+    background-color: var(--clr-dark);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2em;
+}
 
 .information-line {
     background-color: var(--clr-dark);
+    border-top: solid 3px var(--clr-primary);
+    border-bottom: solid 3px var(--clr-primary);
     display: flex;
     padding: 10px;
     justify-content: space-evenly;
 }
 
-.line-icons {
+#line-icon1, #line-icon2, #line-icon3 {
     display: flex;
     width: 100px;
     float: left;
@@ -68,10 +92,13 @@
     text-align: center;
     font-weight: bold;
     padding-top: 90px;
-    line-height: 60px;
+    line-height: 40px;
     width: 600px;
     height: 401px;
     border-radius: 4px 0 0 4px;
+}
+.community-info h2 {
+    font-size: 30px;
 }
 .onlinegaming-img {
     width: 600px;
@@ -82,7 +109,6 @@
 .featured-games {
     margin-top: 50px;
     padding: 15px;
-    font-size: 30px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -93,24 +119,103 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1.5em;
-    width: 1080px;
-    height: 300px;
+    gap: 2em;
+    width: 1200px;
+    height: 330px;
     background-color: var(--clr-dark);
     border-radius: 4px;
-    
 }
 .featured-img {
-    width: 210px;
+    margin-top: 10px;
+    width: 230px;
     height: auto;
-    border-radius: 4px;
+    border-radius: 8px;
     border: solid 3px var(--clr-dark);
 }
 .featured-img:hover {
     opacity: 70%;
 }
 
+/* FEATURED FEEDBACK SECTION */
+.featured-feedback {
+    margin-top: 200px;
+    margin-bottom: 50px;
+    height: auto;
+    background-color: var(--clr-dark); 
+}
+.feedback-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--clr-dark);
+    margin-bottom: 40px;
+}
+.featured-feedback {
+    text-align: center;
+    line-height: 40px;
+    margin-top: 20px;
+}
+#rating-stars {
+    font-size: 40px;
+}
+.featured-feedback-img {
+    width: 470px;
+    height: auto;
+    margin-right: 110px;
+}
+.featured-rating {
+   margin: 0 auto;
+   height: 40px;
+}
 
+/* CUSTOMER FEEDBACK SECTION */
+.user-feedback {
+    display: flex;
+    height: auto;
+    margin-top: 50px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.feedback-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1em;
+    height: auto;
+}
+.userfeedback-container {
+    display: flex;
+    flex-direction: column;
+    width: 320px;
+    height: 170px;
+    background-color: var(--clr-dark);
+    border-radius: 8px;
+}
+.userfeedback-container h5 {
+    margin-left: 5px;
+    margin-top: 20px;
+}
+.rating, .featured-rating {
+    color: var(--clr-primary);
+    font-size: 25px;
+    padding-left: 5px;  
+}
+.rating-description {
+    margin-top: 10px;
+    padding-left: 5px;
+    padding-bottom: 20px;
+}
+.rating-link {
+    margin-bottom: 10px;
+    margin-left: 7px;
+}
+
+@media (max-width: 1205px) {
+    .featured-feedback-img {
+        margin-top: 5px;
+    }
+}
 
 @media (max-width: 980px) {
     .featured-cta {
@@ -131,15 +236,31 @@
     .community-info {
         border-radius: 0 0 4px 4px;
     }
-    .featured-container {
+    .featured-container, .trending-container {
         width: 800px;
         height: auto;
         padding: 20px;
         flex-wrap: wrap;
         margin-bottom: 250px;
     }
+    .featured-feedback-img {
+        margin-top: 70px;
+        width: 370px;
+        height: auto;
+    }
+    #rating-stars {
+        font-size: 25px;
+    }
+    .featured-feedback p {
+        font-size: 0.8rem;
+        line-height: 24px;
+    }
+    .feedback-container {
+        justify-content: center;
+        align-items: center; 
+        flex-wrap: wrap;
+    }
 }
-
 @media (max-width: 720px) {
     .featured-cta {
         display: flex;
@@ -167,8 +288,8 @@
         font-size: 0.4rem;
         margin-left: 2px;
     }
-    #line-icons {
-        font-size: 1.9rem;
+    #line-icon1, #line-icon2, #line-icon3 {
+        font-size: 2rem;
     }
     .onlinegaming-img {
         width: 400px;
@@ -178,8 +299,11 @@
         width: 400px;
         height: auto;
     }
-    .featured-container {
-        width: 450px;
+    .featured-container, .trending-container {
+        width: 400px;
+    }
+    .featured-feedback {
+        display: none;
     }
 }
 
@@ -207,7 +331,7 @@
         font-size: 0.4rem;
         margin-left: 10px;
     }
-    #line-icons {
+    #line-icon1, #line-icon2, #line-icon3 {
         font-size: 1.6rem;
         padding-left: 10px;
     }
