--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,6 +21,10 @@ body {
     background-color: var(--clr-dark-grey);
     color: #fff;
 }
+h2 {
+    font-size: 50px;
+    padding: 20px;
+}
 a {
     text-decoration: none;
     color: #fff;
@@ -123,7 +127,7 @@ nav a:hover {
 footer {
     width: 100%;
     background-color: var(--clr-dark);
-    margin-top: 50px;
+    margin-top: 30px;
 }
 footer a:hover {
     color: var(--clr-primary);
