--- a/styles/index.css
+++ b/styles/index.css
@@ -35,23 +35,27 @@
     width: 130px;
     font-size: 1rem;
 }
-
-.trending-games {
-    margin-top: 30px;
-    margin-bottom: 30px;
+.trending-games, .featured-games {
+    padding-bottom: 30px;
     font-size: 30px;
     display: flex;
+    background-color: var(--clr-dark);
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
+.title-description, .trend-price {
+    font-size: 16px;
+}
+
 .information-line {
     background-color: var(--clr-dark);
     border-top: solid 3px var(--clr-primary);
     border-bottom: solid 3px var(--clr-primary);
     display: flex;
     padding: 10px;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
 
 #line-icon1, #line-icon2, #line-icon3 {
@@ -60,18 +64,10 @@
     float: left;
     color: var(--clr-primary);
 }
-
-.orange-breakline {
-    width: 100%;
-    height: 3px;
-    overflow: hidden;
-    background-color: var(--clr-primary);
-}
 .community-container {
     display: flex;
     justify-content: center;
     margin-top: 20px;
-    
 }
 .community-info {
     background-color: var(--clr-dark);
@@ -94,7 +90,7 @@
 /* FEATURED SECTION */
 .featured-games {
     margin-top: 50px;
-    padding: 15px;
+    padding: 30x;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -107,9 +103,7 @@
     gap: 1.5em;
     width: 950px;
     height: auto;
-    background-color: var(--clr-dark);
     border-radius: 4px;
-    padding: 10px;
 }
 .featured-img {
     width: 200px;
@@ -122,7 +116,6 @@
 
 /* FEATURED FEEDBACK SECTION */
 .featured-feedback {
-    margin-top: 200px;
     margin-bottom: 50px;
     height: auto;
     background-color: var(--clr-dark); 
@@ -132,12 +125,11 @@
     justify-content: center;
     align-items: center;
     background-color: var(--clr-dark);
-    margin-bottom: 40px;
+    margin-top: 200px;
 }
 .featured-feedback {
     text-align: center;
     line-height: 40px;
-    margin-top: 20px;
 }
 #rating-stars {
     font-size: 40px;
@@ -156,7 +148,6 @@
 .user-feedback {
     display: flex;
     height: auto;
-    margin-top: 50px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -178,7 +169,6 @@
 }
 .userfeedback-container h5 {
     margin-left: 5px;
-    margin-top: 20px;
 }
 .rating, .featured-rating {
     color: var(--clr-primary);
@@ -201,7 +191,7 @@
     }
 }
 
-@media (max-width: 980px) {
+@media (max-width: 983px) {
     .featured-cta {
         background-position-x: center;
         background-position-y: 65%;
@@ -282,9 +272,9 @@
         width: 400px;
         height: auto;
     }
+    
     .community-info {
         width: 400px;
-        height: auto;
     }
     .featured-container, .trending-container {
         width: 400px;
