--- a/styles/index.css
+++ b/styles/index.css
@@ -2,10 +2,7 @@
 
 .featured-cta {
     height: 600px;
-    background-image: url("/images/Banner5.jpg");
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background-image: url("../images/Banner5.jpg");
     background-size: cover;
     text-align: center;
     line-height: 50px;
