--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,7 @@
 
 .featured-cta {
     height: 600px;
-    background-image: url("../images/Banner5.jpg");
+    background-image: url("./Banner5.jpg");
     background-size: cover;
     text-align: center;
     line-height: 50px;
