--- a/styles/selected-product.css
+++ b/styles/selected-product.css
@@ -31,8 +31,9 @@ main {
     margin-left: 70px;
 }
 .purchase-options h2 {
-    margin-top: 10px;
-    margin-left: 10px;
+    font-size: 30px;
+    margin-top: -10px;
+    margin-left: 5px;
 }
 .cart-btn {
  margin-right: 5px;
@@ -60,10 +61,12 @@ main {
         padding: 10px;
     }
     .cart-btn, .buy-btn {
-        width: 110px;
+        width: 100px;
     }
     .purchase-options h2 {
-        margin-top: 15px;
+        margin-top: -5px;
+        margin-right: 15px;
+        font-size: 20px;
     }
     .purchase-options {
         margin-top: 100px;
@@ -85,7 +88,7 @@ main {
         padding: 10px;
     }
     .purchase-options h2 {
-        margin-top: 15px;
+        margin-top: -5px;
     }
     .purchase-options {
         margin-top: 100px;
