--- a/styles/styles.css
+++ b/styles/styles.css
@@ -25,6 +25,10 @@ h2 {
     font-size: 50px;
     padding: 20px;
 }
+.footer-h2 {
+    padding: 0;
+}
+
 a {
     text-decoration: none;
     color: #fff;
@@ -114,7 +118,7 @@ nav a:hover {
         flex-wrap: wrap;
         overflow-x: hidden;
     }
-    .footer-column h4 {
+    .footer-column h2 {
         text-align: center;
     }
     .footer-column li {
@@ -132,6 +136,13 @@ footer {
 footer a:hover {
     color: var(--clr-primary);
 }
+
+.footer-h2 {
+    color: #fff;
+    font-size: 1em;
+    margin-bottom: 15px;
+}
+
 .logo {
     align-items: center;
     text-align: center;
