--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 @import url("variables.css");
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 *, ::before, ::after {
     box-sizing: border-box;
@@ -25,6 +26,11 @@ h2 {
     font-size: 50px;
     padding: 20px;
 }
+.h2-heading {
+    font-family: 'Permanent Marker', cursive, sans-serif;
+    font-size: 60px;
+}
+
 .footer-h2 {
     padding: 0;
 }
