--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 @import url("variables.css");
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Russo+One&display=swap');
 
 *, ::before, ::after {
     box-sizing: border-box;
@@ -27,7 +27,7 @@ h2 {
     padding: 20px;
 }
 .h2-heading {
-    font-family: 'Permanent Marker', cursive, sans-serif;
+    font-family: 'Russo One', sans-serif;
     font-size: 60px;
 }
 
