--- a/styles/products.css
+++ b/styles/products.css
@@ -14,6 +14,10 @@ h1 {
     margin-bottom: 50px;
     margin-top: 50px;
 }
+h4 {
+    text-align: center;
+    padding-top: 5px;
+}
 
 section {
     display: flex;
@@ -22,6 +26,8 @@ section {
 }
 
 .productImage {
+    margin-left: 5px;
+    margin-top: 5px;
     width: 150px;
     border-radius: 4px 4px 0 0;
     height: auto;
@@ -41,10 +47,10 @@ section {
 }
 
 .game {
-    width: 150px;
-    height: 300px;
+    width: 160px;
+    height: 330px;
     background-color: var(--clr-dark);
-    border-radius: 0 0 8px 8px;
+    border-radius: 8px;
 }
 .products-btn {
     background-color: var(--clr-dark);
