--- a/styles/view-cart.css
+++ b/styles/view-cart.css
@@ -6,24 +6,8 @@ main {
     padding-bottom: 200px;
 }
 
-
-.header-container {
-    display: flex;
-    justify-content: flex-end;  
-}
 h1 {
-    position: absolute;
-    left: 0;
-    margin-top: 4px;
-}
-
-.header-links {
-    margin-top: 20px;
-    margin-right: 20px;
-    padding-left: 20px;
-}
-.header-links a:hover {
-    color: var(--clr-primary);
+    margin-left: 5px;
 }
 
 .basket-container {
@@ -102,22 +86,24 @@ h1 {
     padding: 5px;
 }
 .discount-container {
-    margin-left: 20px;
-    padding: 10px;
+    display: flex;
+    width: 285px;
+    height: 200px;
+    padding-bottom: 100px;
 }
-.discount {
-    padding: 5px;
-    background-color: var(--clr-dark);
-    border-radius: 5px;
+label {
+    margin-left: 10px;
+    margin-top: 54px;
 }
 .discount-code {
+    margin-left: 10px;
     height: 25px;
     width: 130px;
-    margin-top: 50px;
     border: 1px solid var(--clr-primary);
     background-color: var(--clr-dark-grey);
     border-radius: 5px;
     color: #fff;
+    margin-top: 50px;
 }
 ::placeholder {
     color: #fff;
@@ -134,6 +120,7 @@ input:focus::-webkit-input-placeholder {
     width: 70px;
     border-radius: 4px;
     margin-left: 5px;
+    margin-top: 50px;
 }
 .checkout-container {
     display: flex;
@@ -181,6 +168,9 @@ input:focus::-webkit-input-placeholder {
         margin: 0 auto;
         margin-top: 100px;
         line-height: 40px;
+    }
+    .discount-container {
+        margin: 0 auto;
     }
 }
 @media (max-width: 860px) {
