--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,7 @@
 }
 
 main {
+    padding-top: 140px;
     padding-bottom: 150px;
     overflow: hidden;
 }
@@ -159,7 +160,6 @@ footer a:hover {
         display: inline-block;
         width: 90px;
     }
-    
 }
 
 @media (max-width: 840px) {
